<resources>
    <string name="app_name">ChitChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_signup">Login/SignUp</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="login">Login</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="username">Username</string>
    <string name="add_photo">Add Photo</string>
    <string name="bio">Bio</string>
    <string name="confirm">Confirm</string>
    <string name="dashboard">Dashboard</string>
    <string name="name">Name</string>
    <string name="go_to_profile">Go to Profile</string>
    <string name="search">Search</string>
    <string name="hey_there_i_m_using_chitchat">Hey there!, I\'m using ChitChat</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="back">Back</string>
    <string name="type_here">Type here...</string>
    <string name="send">Send</string>
</resources>