<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">


        <TextView
            android:id="@+id/heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_signup"
            android:layout_marginTop="30dp"
            android:textSize="40sp"
            android:textAlignment="center"
            style="@style/Heading"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/username"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/heading"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textSize="24sp"
                android:textStyle="bold" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_num_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/user_name_layout"
            app:layout_constraintLeft_toLeftOf="@id/heading"
            app:layout_constraintRight_toRightOf="@id/heading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:textSize="24sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/send_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_otp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_marginTop="15dp"
            app:layout_constraintRight_toRightOf="@id/phone_num_layout"
            app:layout_constraintTop_toBottomOf="@id/phone_num_layout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otp_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/otp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/send_otp"
            app:layout_constraintLeft_toLeftOf="@id/phone_num_layout"
            app:layout_constraintRight_toRightOf="@id/send_otp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:textSize="24sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:padding="15dp"
            app:layout_constraintRight_toRightOf="@id/send_otp"
            app:layout_constraintTop_toBottomOf="@id/otp_layout"
            app:layout_constraintLeft_toLeftOf="@id/otp_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>