<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserData">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_image_card"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="80dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/profile_photo" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/username"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/profile_image_card"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textSize="24sp"
                android:textStyle="bold" />


        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/add_photo_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_add_photo"
            android:elevation="10dp"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintRight_toRightOf="@id/profile_image_card"
            app:layout_constraintBottom_toBottomOf="@id/profile_image_card"
            android:contentDescription="@string/add_photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/status_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/bio"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/user_name_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textSize="24sp"
                android:textStyle="bold" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirm_data_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_marginTop="40dp"
            android:textSize="24sp"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/status_layout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>