<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userDataModel"
            type="com.stp.chitchat.UserModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserProfile">


        <ImageView
            android:id="@+id/add_photo_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_add_photo"
            android:elevation="10dp"
            app:layout_constraintRight_toRightOf="@id/profile_image_card"
            app:layout_constraintBottom_toBottomOf="@id/profile_image_card"
            android:contentDescription="@string/add_photo" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_image_card"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/profile_photo" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image_card"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{userDataModel.userName}"
            android:textSize="24sp"
            style="@style/Texts"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_text"
            app:drawableEndCompat="@drawable/ic_edit" />

        <View
            android:id="@+id/underline1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/black"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintLeft_toLeftOf="@id/name"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/bio_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/underline1"/>

        <TextView
            android:id="@+id/bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Abhi daalta hun"
            android:textSize="24sp"
            style="@style/Texts"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bio_text"
            app:drawableEndCompat="@drawable/ic_edit" />

        <View
            android:id="@+id/underline2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/black"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/bio"
            app:layout_constraintLeft_toLeftOf="@id/bio"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/phone_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/underline2"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{userDataModel.phoneNumber}"
            android:textSize="24sp"
            style="@style/Texts"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_text" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>