<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userName"
            type="String" />

        <variable
            name="message"
            type="com.stp.chitchat.MessageModel" />

        <variable
            name="fragment"
            type="com.stp.chitchat.Chat" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Chat">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            style="@style/ActionBar"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    android:onClick="@{()->fragment.onBackPressed()}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:contentDescription="@string/back" />

                <TextView
                    android:id="@+id/his_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Texts"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toRightOf="@id/back_btn"
                    app:layout_constraintTop_toTopOf="@id/back_btn"
                    app:layout_constraintBottom_toBottomOf="@id/back_btn" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.appbar.MaterialToolbar>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/chat_bottom_layout"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/chat_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/type_box_layout"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:hint="@string/type_here"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/send_btn"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/type_box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:inputType="textPersonName"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/send_btn"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_send"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/send" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>